--- a/conversions/templates/conversions/edit_conversion.html
+++ b/conversions/templates/conversions/edit_conversion.html
@@ -23,18 +23,11 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-12 col-lg-10 col-xl-8 bg-white mt-4">
-                <hr>
-                <h5>Basic Info</h5>
-                <hr>
-            </div>
-        </div>
-
-        <div class="row justify-content-center">
-            <div class="col-12 col-lg-10 col-xl-8 bg-white mb-4">
-                <form method="POST" action="{% url 'edit_conversion' conversion.id %}" class="form mb-2" enctype="multipart/form-data">
+            <div class="col-12 col-lg-10 col-xl-8 bg-white br-2 mb-4 mt-4">
+                <form method="POST" action="{% url 'edit_conversion' conversion.id %}" class="form mb-2 p-3" enctype="multipart/form-data">
                     {% csrf_token %}
                     <!-- Main Conversion Form -->
+                    <h5 class="mb-4 mt-4">Basic Info</h5>
                     {{ form.listing_title | as_crispy_field }}
                     {{ form.user | as_crispy_field }}
                     <div class="form-row">
@@ -103,9 +96,9 @@
                     <!-- Image Upload Formset -->
                     {{ form.main_image| as_crispy_field }}
                     {{ formset | crispy }}
-                    <div class="text-left mt-3 mb-3">
-                        <a class="btn btn-outline-black rounded-2" href="{% url 'profile' %}">Cancel</a>
-                        <button class="btn btn-black rounded-2" type="submit">Save Changes</button>
+                    <div class="text-right mt-3 mb-3">
+                        <a class="btn btn-lg btn-outline-black rounded-2" href="{% url 'profile' %}">Cancel</a>
+                        <button class="btn btn-lg btn-black rounded-2" type="submit">Save Changes</button>
                     </div>
                 </form>
             </div>
