Update style on add product form

--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -20,28 +20,18 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col mt-5">
-                <p class="text-white text-center">
-                Use the form below to add products to the store.</p>
-            </div>
-        </div>
         <div class="row justify-content-center">
-            <div class="col-12 col-lg-10 col-xl-8 bg-white mt-4">
-
-            </div>
-        </div>
-
-        <div class="row justify-content-center">
-            <div class="col-12 col-lg-10 col-xl-8 bg-white mb-4 br-2">
+            <div class="col-12 col-lg-10 col-xl-8 bg-white mb-4 mt-5 br-2">
+                <h3 class="text-black mt-5 text-center">
+                Use the form below to add a product to the store.</h3>
                 <form method="POST" action="{% url 'add_product' %}" class="form mt-4 mb-2 p-3" enctype="multipart/form-data">
                     {% csrf_token %}
                     <!-- Main Product Form -->
                     {{ form | crispy }}
 
-                    <div class="text-left mt-3 mb-3">
-                        <a class="btn btn-outline-black rounded-2" href="{% url 'products' %}">Cancel</a>
-                        <button class="btn btn-black rounded-2" type="submit">Add Product</button>
+                    <div class="text-right mt-4 mb-3">
+                        <a class="btn btn-lg btn-outline-black rounded-2" href="{% url 'products' %}">Cancel</a>
+                        <button class="btn btn-lg btn-black rounded-2" type="submit">Add Product</button>
                     </div>
                 </form>
             </div>
