--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -42,6 +42,12 @@
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
+                    {% if request.user.is_superuser %}
+                        <small class="ml-3">
+                            <a class="br-1 p-2 bg-white" href="{% url 'edit_product' product.id %}">Edit</a>
+                            <a class="br-1 ml-1 p-2 bg-white text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        </small>
+                    {% endif %}
                     <p class="mt-3 text-white">{{ product.description }}</p>
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
