Update background color to match logo

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -176,7 +176,7 @@ hr {
 /* Colours */
 
 .bg-dark {
-    background-color: #2F363D !important;
+    background-color: #363E46 !important;
 }
 
 .bg-light {
