--- a/conversions/templates/conversions/conversion_detail.html
+++ b/conversions/templates/conversions/conversion_detail.html
@@ -71,8 +71,8 @@
                             <h4 class="lead mb-0 mt-2 text-left text-black font-weight-bold">£{{ conversion.price }}</h4>
                             <h3 class="mt-3">Vehicle Description</h3>
                             <p class="mt-3 text-black">{{ conversion.vehicle_description }}</p>
-                            <a class="btn border-black rounded-2 text-black contact-info-button">Contact Seller</a>
-                            <a href="{% url 'save_listing' conversion.id conversion.unique_ref %}" class="ml-2 btn border-black rounded-2 text-black">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
+                            <a class="btn border-black rounded-2 text-black contact-info-button btn-outline-black">Contact Seller</a>
+                            <a href="{% url 'save_listing' conversion.id conversion.unique_ref %}" class="ml-2 btn border-black rounded-2 text-black btn-outline-black">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
                             <p class="mt-5 text-black large-font contact-info-row d-none">{{ conversion.name }} - {{ conversion.phone_number }}</p>
                             <p class="mt-3 text-black large-font contact-info-row d-none">Email - {{ conversion.user.user.email }}</p>
                         </div>
@@ -223,12 +223,12 @@
                 <div class="bg-white col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2 d-flex justify-content-center">
                     <div class="p-3 d-flex align-items-center product-details-container mb-5 mt-md-5">
                         <div class="inner-container">
-                            <h2 class="mb-0 text-black">{{ conversion.listing_title }}</h2>
-                            <h4 class="lead mb-0 mt-2 text-left text-black font-weight-bold">£{{ conversion.price }}</h4>
+                            <h2 class="mb-0 title text-black">{{ conversion.listing_title }}</h2>
+                            <h4 class="lead mb-3 mt-2 text-left text-black larger-font">£{{ conversion.price }}</h4>
                             <h3 class="mt-3">Vehicle Description</h3>
                             <p class="mt-3 text-black">{{ conversion.vehicle_description }}</p>
-                            <a class="btn border-black rounded-2 text-black contact-info-button">Contact Seller</a>
-                            <a href="{% url 'save_listing' conversion.id conversion.unique_ref %}" class="ml-2 btn border-black rounded-2 text-black">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
+                            <a class="btn border-black rounded-2 text-black contact-info-button btn-outline-black">Contact Seller</a>
+                            <a href="{% url 'save_listing' conversion.id conversion.unique_ref %}" class="ml-2 btn border-black rounded-2 text-black btn-outline-black">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
                             <p class="mt-5 text-black large-font contact-info-row d-none">{{ conversion.name }} - {{ conversion.phone_number }}</p>
                             <p class="mt-3 text-black large-font contact-info-row d-none">Email - {{ conversion.user.user.email }}</p>
                         </div>
