--- a/products/templates/products/listing_levels.html
+++ b/products/templates/products/listing_levels.html
@@ -27,11 +27,11 @@
             <div class="col-12 col-lg-4 mb-5">
                 <a href="{% url 'view_plan' 7 %}">
                     <div class="card no-border">
-                        <div class="card-body bg-cream text-center">
+                        <div class="card-body bg-cream text-center br-2-top">
                             <h1 class="mb-4">STANDARD</h1>
                             <img class="img-fluid br-1" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="">
                         </div>
-                        <div class="card-footer text-center text-white">
+                        <div class="card-footer text-center text-white br-2-bottom">
                             <p class="larger-font"><strike>£7.99 for 30 days.</strike></p>
                             <p class="large-font mb-1">(£0.00 promotion will run until the end of July)</p>
                         </div>   
@@ -41,11 +41,11 @@
             </div>
             <div class="col-12 col-lg-4 mb-5">
                 <div class="card no-border">
-                    <div class="card-body bg-cream text-center">
+                    <div class="card-body bg-cream text-center br-2-top">
                         <h1 class="mb-4">EXTENDED</h1>
                         <img class="img-fluid br-1" src="{{ MEDIA_URL }}service-level-image.jpeg" alt="">
                     </div>
-                    <div class="card-footer text-center text-white">
+                    <div class="card-footer text-center text-white br-2-bottom">
                         <p class="larger-font mt-4 mb-4">£14.99 for 60 days.</p> 
                     </div>
                      
@@ -53,11 +53,11 @@
             </div>
             <div class="col-12 col-lg-4 mb-5">
                 <div class="card no-border">
-                    <div class="card-body bg-cream text-center">
+                    <div class="card-body bg-cream text-center br-2-top">
                         <h1 class="mb-4">QUARTER</h1>
                         <img class="img-fluid br-1" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="">
                     </div>
-                    <div class="card-footer text-center text-white">
+                    <div class="card-footer text-center text-white br-2-bottom">
                         <p class="larger-font mt-4 mb-4">£19.99 for 90 days.</p> 
                     </div>
                      
