--- a/conversions/templates/conversions/conversions.html
+++ b/conversions/templates/conversions/conversions.html
@@ -62,7 +62,7 @@
                     {% if conversion.is_active %}
                     <div class="row mt-1 mb-4 {% if forloop.counter == 1 %}mt-2{% else %}mt-4{% endif %}"></div>
                         <div class="row conversion-listing">
-                            <div class="col-12 col-xl-4 {% if forloop.counter|divisibleby:2 %}order-xl-last{% endif %} d-flex align-items-center">
+                            <div class="col-12 col-xl-4 {% if forloop.counter|divisibleby:2 %}order-xl-last{% endif %} d-flex align-items-center mb-3">
                                 <div class="mx-auto">
                                     {% if conversion.main_image %}
                                     <!-- Carousel of first three conversion images -->
@@ -101,10 +101,10 @@
                             </div>
                             <div class="col-12 col-xl-8 d-flex justify-content-center">
                                 <div class="card no-border w-100 h-100">
-                                    <div class="card-header bg-cream text-white">
+                                    <div class="card-header bg-none no-border text-white">
                                         <a href="{% url 'conversion_detail' conversion.id %}">
                                             <h3 class="mb-0 p-2 title">{{ conversion.listing_title }}</h3>
-                                            <h4 class="mb-2 p-2 text-black text-left font-weight-bold">£{{ conversion.price }}</h4>
+                                            <h4 class="mb-2 p-2 text-left font-weight-bold">£{{ conversion.price }}</h4>
                                         </a>
                                     </div>
                                     <div class="card-body h-100 text-white conversion-detail-border">
@@ -121,8 +121,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="card-footer text-center text-lg-left">
-                                        <a href="{% url 'conversion_detail' conversion.id %}" class="btn btn-outline-black border-white rounded-2 mb-2">View Details</a>
+                                    <div class="card-footer no-border bg-none text-left">
+                                        <a href="{% url 'conversion_detail' conversion.id %}" class="btn btn-outline-black border-white rounded-2 mb-2 ml-2">View Details</a>
                                         <a href="{% url 'save_listing' conversion.id conversion.unique_ref %}?from_conversions=True" class="ml-2 btn btn-outline-black border-white rounded-2 mb-2">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
                                         <p class="mt-3 text-white large-font contact-info-row d-none">{{ conversion.name }} - {{ conversion.phone_number }}</p>
                                         <p class="mt-3 text-white large-font contact-info-row d-none">Email - {{ conversion.user.user.email }}</p>
@@ -130,7 +130,7 @@
                                 </div>
                             </div>
                         </div>
-                        <hr class="text-white mt-5">
+                        <hr class="text-white mt-3">
                     {% endif %}
                 {% endfor %}
             </div>
