--- a/templates/base.html
+++ b/templates/base.html
@@ -141,18 +141,18 @@
     {% endblock %}
     
       <!--FOOTER-->
-        <footer id="footer" class="mt-5 bg-cream">
+        <footer id="footer" class="mt-5 bg-dark-main">
             <div class="container">
                 <div class="row">
                     <div class="col-12 mt-3 d-flex justify-content-center">
-                        <a class="nav-link footer-icon" href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square text-black"></i></a>
-                        <a class="nav-link footer-icon" href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square text-black"></i></a>
-                        <a class="nav-link footer-icon" href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square text-black"></i></a>
+                        <a class="nav-link footer-icon" href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square text-white"></i></a>
+                        <a class="nav-link footer-icon" href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square text-white"></i></a>
+                        <a class="nav-link footer-icon" href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square text-white"></i></a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12 mt-2 mb-3 d-flex justify-content-center">
-                        <p class="footer-text text-center ">Copyright 2021 - Wild Mile</p>
+                        <p class="footer-text text-center text-white">Copyright 2021 - Wild Mile</p>
                     </div>
                 </div>        
             </div>
