--- a/conversions/templates/conversions/conversion_detail.html
+++ b/conversions/templates/conversions/conversion_detail.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
 
         <div class="row">
-            <div class="col offset-lg-2 mt-5 mb-4">
+            <div class="col offset-xl-2 mt-5 mb-4">
                 <a class="text-white" href="{% url 'conversions' %}">
                     <span><i class="fas fa-chevron-left text-white"></i> BACK TO CONVERSIONS</span>
                 </a>
@@ -182,10 +182,21 @@
             {% endif %}
 
         {% else %}
-
+            <!-- Title and Price -->
+            <div class="container">
+                <div class="col-11">
+                    <div class="row">
+                        <div class="br-1 text-center w-100 offset-1 text-white p-3 mb-1 mt-3">
+                            <h2 class="mb-0 largest-font title">{{ conversion.listing_title }}</h2>
+                            <h4 class="lead mb-3 mt-2 text-center largest-font">£{{ conversion.price }}</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+           
             <!-- Main Conversion information -->
             <div class="row">
-                <div class="col-12 col-md-6 col-lg-5 col-xl-4 offset-xl-2 offset-lg-1 d-flex justify-content-center col-border-col-1">
+                <div class="col-12 col-xl-4 offset-xl-2 d-flex justify-content-center col-border-col-1">
                     <div class="p-2 image-container d-flex justify-content-center mt-1 mb-3">
                         {% if conversion.main_image %}
                         <!-- Carousel of first three conversion images -->
@@ -221,12 +232,10 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="bg-white col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2 d-flex justify-content-center">
-                    <div class="p-3 d-flex align-items-center product-details-container mb-5 mt-md-5">
+                <div class="bg-white col-12 col-xl-4 col-border-col-2 d-flex justify-content-center">
+                    <div class="p-3 d-flex align-items-center mb-3 mt-3">
                         <div class="inner-container">
-                            <h2 class="mb-0 title text-black">{{ conversion.listing_title }}</h2>
-                            <h4 class="lead mb-3 mt-2 text-left text-black larger-font">£{{ conversion.price }}</h4>
-                            <h3 class="mt-3">Vehicle Description</h3>
+                            <h3 class="mt-1">Vehicle Description</h3>
                             <p class="mt-3 text-black">{{ conversion.vehicle_description }}</p>
                             <a class="btn border-black rounded-2 text-black contact-info-button btn-outline-black">Contact Seller</a>
                             <a href="{% url 'save_listing' conversion.id conversion.unique_ref %}" class="ml-2 btn border-black rounded-2 text-black btn-outline-black">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
@@ -236,8 +245,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5 mb-5">
-                <div class="col-12 col-md-6 col-lg-5 col-xl-4 offset-lg-1 offset-xl-2 col-border-col-1 bg-white d-flex justify-content-center">
+            <div class="row mt-3 mb-3">
+                <div class="col-12 col-xl-4 offset-xl-2 col-border-col-1 bg-white d-flex justify-content-center">
                     <div class="p-3 d-flex align-items-center product-details-container">
                         <div class="inner-container">
                             <h3 class="mt-2">Conversion Description</h3>
@@ -245,7 +254,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2">
+                <div class="col-12 col-xl-4 col-border-col-2">
                     <div class="row">
                         <div class="col-6 p-5 border-right-thin">
                             <h3 class="text-white">Details</h3>
@@ -278,11 +287,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="row mt-5 mb-5">
-                <!-- <div class="col-12  col-lg-5 col-xl-4 offset-xl-2 offset-lg-1 d-flex justify-content-center col-border-col-1">
-                </div> -->
-                <div class="col-12 col-md-12 col-lg-10 col-xl-8 offset-lg-1 offset-xl-2 bg-white d-flex justify-content-center col-border">
+            <div class="row mb-4">
+                <div class="col-12 col-xl-8 offset-xl-2 bg-white d-flex justify-content-center col-border">
                     <div class="p-4 product-details-container">
                         <h3 class="mt-2">Beds Description</h3>
                         <p class="mt-3">Berths - {{ conversion.berths}}</p>
@@ -292,10 +300,15 @@
             </div>
             
             <!-- Image Gallery Grid MD and above only -->
-            <div class="row mb-5 w-100">
-                <div class="col-12 col-lg-8 offset-lg-2 d-none d-md-block w-100">
+            <div class="row mb-3">
+                <div class="col-12 col-xl-8 offset-xl-2">
+                    <h1 class="text-white mb-4 ml-4">Image Gallery</h1>
+                </div>
+            </div>
+            
+            <div class="row mt-2">
+                <div class="col-12 col-xl-8 offset-xl-2 d-none d-md-block w-100">
                     <section>
-                        <h1 class="text-white mb-4">Image Gallery</h1>
                         {% if image_list %}
                         <div class="gallery">
                             {% for image in image_list|slice:"0:6" %}
