Add padding to my account and bag icons

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
                 </form>
             </div>
             <div class="col-12 pr-5 col-lg-4 col-xl-5 my-auto py-1 py-lg-0">
-                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                <ul class="list-inline list-unstyled mt-3 text-center text-lg-right my-0">
                     <li class="list-inline-item dropdown">
                         <a class="text-white nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
