Adjust nav item hover effect settings

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,7 +20,7 @@ body {
 }
 
 #logo-img {
-    width: 14%;
+    width: 12%;
     position: absolute;
     left: 6rem;
     top: -1.5rem;
@@ -213,6 +213,8 @@ a {
     color: unset;
 }
 
+/* Border classes */
+
 .light-border {
     border: 4px solid rgba(194,208,194);
 }
@@ -223,6 +225,10 @@ a {
 
 .bg-light-green {
     background-color: #627072 !important;
+}
+
+.border-muted {
+    border: 1px solid rgba(255,255,255,.5);
 }
 
 /* Navbar */
@@ -270,7 +276,7 @@ a {
 .nav-link::before {
   transition: 300ms;
   height: 2px;
-  left: 18%;
+  left: 22%;
   content: "";
   position: absolute;
   background-color: white;
@@ -279,7 +285,7 @@ a {
 .nav-link-faq::before {
   transition: 300ms;
   height: 2px;
-  left: 28%;
+  left: 31%;
   content: "";
   position: absolute;
   background-color: white;
@@ -288,7 +294,7 @@ a {
 .nav-link-about::before {
   transition: 300ms;
   height: 2px;
-  left: 15%;
+  left: 19%;
   content: "";
   position: absolute;
   background-color: white;
@@ -297,7 +303,7 @@ a {
 .nav-link-home::before {
   transition: 300ms;
   height: 2px;
-  left: 11%;
+  left: 18%;
   content: "";
   position: absolute;
   background-color: white;
@@ -336,7 +342,7 @@ li.nav-item{
 }
 
 #title-column {
-    margin-top: 14rem;
+    margin-top: 25rem;
 }
 
 .scratched-font {
