--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,7 +21,7 @@
             <h3 class="text-center text-white">A platform to buy and sell unique converted vehicles</h3>
             <div class="my-5">
                 <h4 class="text-center">
-                    <a href="{% url 'conversions' %}" class="see-conversions-button btn btn-lg rounded-2 text-uppercase text-white py-3">See Conversions</a></h4>
+                    <a href="{% url 'conversions' %}" class="see-conversions-button btn btn-lg rounded-2 text-uppercase text-white bg-light-green border-muted py-3">See Conversions</a></h4>
             </div>
         </div>
     </div>
