--- a/templates/base.html
+++ b/templates/base.html
@@ -111,7 +111,11 @@
         </div>
         <div id="special-message-banner" class="row text-center">
             <div class="col text-white">
-                <h4 class="logo-font my-1">NEW CONVERSIONS ADDED WEEKLY</h4>                
+                <marquee behavior="scroll" direction="left">
+                    <h5 id="scrolling-message-1" class="logo-font my-1 d-inline-block">NEW CONVERSIONS ADDED WEEKLY - CHECK BACK REGULARLY</h5>
+                    <h5 class="d-inline-block">INTRODUCTORY OFFER - LIST FOR FREE UNTIL THE END OF JUNE 2021!</h5>
+                </marquee>
+                              
             </div>            
         </div>
     </header>
