--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -12,30 +12,29 @@
 {% block content %}
 <div class="overlay"></div>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row mt-3">
             <div class="col mt-5">
-                <h2 class="logo-font page-header text-white">Merchandise</h2>
+                <h2 class="logo-font page-header text-white text-md-left text-center">Merchandise</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col text-center">
+            <div class="col text-center offset-md-1 text-md-left">
                 <a class="category-badge text-decoration-none" href="{% url 'products' %}">
-                    <span class="p-2 mt-2 badge badge-white text-white rounded-2 border border-light{% if not current_category %} active-category{% endif %}">All Products</span>
+                    <span class="p-2 mt-2 badge bg-white text-black rounded-2 border border-light{% if not current_category %} active-category{% endif %}">All Products</span>
                 </a>
                 {% for c in all_categories %}
                     <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
-                        <span class="p-2 mt-2 badge badge-white text-white rounded-2 border border-light{% if current_category == c.name %} active-category{% endif %}">{{ c.friendly_name }}</span>
+                        <span class="p-2 mt-2 badge bg-white text-black rounded-2 border border-light{% if current_category == c.name %} active-category{% endif %}">{{ c.friendly_name }}</span>
                     </a>
                 {% endfor %}
-                <hr class="page-header-hr text-white mb-1">
             </div>
         </div>
         <div class="row">
             <div class="product-container col-10 offset-1">
-                <div class="row mt-1 mb-2">
+                <div class="row mt-3 mb-4">
                     <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
                         <div class="sort-select-wrapper w-50">
-                            <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                            <select id="sort-selector" class="custom-select custom-select-sm rounded-2 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
                                 <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
                                 <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
                                 <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
