Added hr below item count

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -51,6 +51,7 @@
                         <p class="text-white mt-3 text-center text-md-left">
                             {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
                         </p>
+                        <hr class="text-white">
                     </div>
                 </div>
                 <div class="row">
