--- a/conversions/templates/conversions/conversions.html
+++ b/conversions/templates/conversions/conversions.html
@@ -51,8 +51,9 @@
                     <div class="col-12 col-md-6 order-md-first">
                         <p class="text-white mt-3 text-center text-md-left">
                             {{ conversions|length }} Conversion{% if conversions|length is not 1 %}s{% endif %}
-                            {% if search_term %} found for <strong>"{{ search_term }}"</strong>{% elif current_category %} found in "{{ current_category }}"{% endif %}
+                            {% if search_term %} found for <strong>"{{ search_term }}"</strong>{% elif current_category %} found in "{{ current_category }}"{% else %} available{% endif %}
                         </p>
+                        <hr class="text-white">
                     </div>
                 </div>
 
